# chat_mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: README.md  chatgpt_desktop_config.json  claude_desktop_config.json
src/chat_mcp/: __init__.py  server.py
tests/: __init__.py  test_server.py
